# mwc-scrap

./: .gitignore  README.md  config.py  crawler.py  demo_crawling.py  env_example.txt  init_db.py  main.py  models.py  pyproject.toml  railway.toml  railway_deploy.md  report_generator.py  requirements.txt  run.py  setup_postgresql.md
templates/: index.html  rule_detail.html
